--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,104 +45,143 @@
             position: absolute;
             bottom: 0;
             width: 100%;
-            height: 60px; /* Altura del pie de página */
-            line-height: 60px; /* Centrar verticalmente el texto */
-            background-color: #f8f9fa; /* Color de fondo del pie de página */
-            border-top: 1px solid #dee2e6; /* Línea superior */
-            text-align: center; /* Alinear el texto en el centro horizontalmente */
+            height: 60px;
+            /* Altura del pie de página */
+            line-height: 60px;
+            /* Centrar verticalmente el texto */
+            background-color: #f8f9fa;
+            /* Color de fondo del pie de página */
+            border-top: 1px solid #dee2e6;
+            /* Línea superior */
+            text-align: center;
+            /* Alinear el texto en el centro horizontalmente */
         }
 
         /* Estilo para el ícono de WhatsApp */
         .whatsapp-icon {
-            margin-left: 10px;
-            cursor: pointer; /* Cambia el cursor al pasar por encima */
+            margin-left: 545px;
+            /* Movido hacia la derecha */
+            margin-top: -250px;
+            /* Movido hacia arriba */
+            cursor: pointer;
+            /* Cambia el cursor al pasar por encima */
+            position: absolute;
+            /* Posición absoluta */
         }
     </style>
 </head>
+
 <body>
 
-<!-- Barra de Navegación -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-    <div class="container">
-        <a class="navbar-brand" href="#">
-            <img src="TecHUB LOGO.png" alt="Logo TecHUB" height="50" class="mr-2">
-            TecHUB</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="servicios.html">Servicios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="queesperas.html">¿Que Esperas?</a>
-                  </li>
-                <!-- Ícono de WhatsApp en el Navbar -->
-                <li class="nav-item">
-                    <a href="https://api.whatsapp.com/send?phone=56940889250" class="nav-link whatsapp-icon">
-                        <img src="whatsapp-icon.png" alt="WhatsApp" height="25">
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<!-- Contenido de la subpágina - Contacto -->
-<section id="contacto">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 text-center"> <!-- Agregado text-center -->
-                <h2>Contacto</h2>
-                <p>Para más información sobre nuestros servicios, no dudes en ponerte en contacto con nosotros:</p>
-                <p>Email: info@techub.com</p>
-                <p>Teléfono: +569 4088 9250</p>
+    <!-- Barra de Navegación -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="TecHUB LOGO.png" alt="Logo TecHUB" height="50" class="mr-2">
+                TecHUB</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="servicios.html">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="queesperas.html">¿Que Esperas?</a>
+                    </li>
+                </ul>
             </div>
-            <div class="col-md-6 text-center"> <!-- Agregado text-center -->
-                <div class="contact-form">
-                    <h3>Envíanos un mensaje</h3>
-                    <form id="myForm"> <!-- Añadido un ID al formulario -->
-                        <div class="form-group">
-                            <label for="nombre">Nombre:</label>
-                            <input type="text" class="form-control" id="nombre">
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email:</label>
-                            <input type="email" class="form-control" id="email">
-                        </div>
-                        <div class="form-group">
-                            <label for="mensaje">Mensaje:</label>
-                            <textarea class="form-control" id="mensaje" rows="5"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
-                    </form>
+        </div>
+    </nav>
+    <!-- Contenido de la subpágina - Contacto -->
+    <section id="contacto">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 text-center">
+                    <!-- Agregado text-center -->
+                    <h2>Contacto</h2>
+                    <p>Para más información sobre nuestros servicios, no dudes en ponerte en contacto con nosotros:</p>
+                    <p>Email: info@techub.com</p>
+                    <p>Teléfono: +569 4088 9250</p>
+                </div>
+                <div class="col-md-6 text-center">
+                    <!-- Agregado text-center -->
+                    <div class="contact-form">
+                        <h3>Envíanos un mensaje</h3>
+                        <form id="myForm" onsubmit="return validateForm()">
+                            <!-- Añadido un ID al formulario -->
+                            <div class="form-group">
+                                <label for="nombre">Nombre:</label>
+                                <input type="text" class="form-control" id="nombre">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email:</label>
+                                <input type="email" class="form-control" id="email">
+                            </div>
+                            <div class="form-group">
+                                <label for="mensaje">Mensaje:</label>
+                                <textarea class="form-control" id="mensaje" rows="5"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Enviar</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
+    <!-- Ícono de WhatsApp -->
+    <section id="whatsapp" class="text-left mb-4 ml-3 mt-2">
+        <!-- Movido a la izquierda y un poco hacia arriba -->
+        <a href="https://api.whatsapp.com/send?phone=56940889250" class="whatsapp-icon">
+            <img src="whatsapp.jpg" alt="WhatsApp" height="200">
+        </a>
+    </section>
 
-<!-- Pie de Página -->
-<footer class="footer">
-    <div class="container">
-        <span class="text-muted">© 2024 TecHUB - Soluciones Informáticas</span>
-    </div>
-</footer>
+    <!-- Pie de Página -->
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted">© 2024 TecHUB - Soluciones Informáticas</span>
+        </div>
+    </footer>
 
-<!-- Bootstrap JavaScript y jQuery -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <!-- Bootstrap JavaScript y jQuery -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script>
+        function validateForm() {
+            var nombre = document.getElementById("nombre").value;
+            var email = document.getElementById("email").value;
+            var mensaje = document.getElementById("mensaje").value;
+            
+            if (nombre == "") {
+                alert("Por favor, ingrese su nombre.");
+                return false;
+            }
+            if (email == "") {
+                alert("Por favor, ingrese su email.");
+                return false;
+            }
+            if (mensaje == "") {
+                alert("Por favor, ingrese su mensaje.");
+                return false;
+            }
+            
+            alert("Mensaje enviado correctamente.");
+            return true;
+        }
+    </script>
 </body>
+
 </html>
